--- a/less/navigationButton.less
+++ b/less/navigationButton.less
@@ -14,6 +14,7 @@
 
 	.tooltip {
 		font-family: @font-family;
+		font-weight: normal;
 		font-size: 13px;
         position: absolute;
         width: 100%;
@@ -30,7 +31,7 @@
 
 	.page-level-progress-navigation {
 		.tooltip {
-			bottom: -3px;
+			bottom: -5px;
 		}
 	}
 
