--- a/templates/navigationButton-drawer.hbs
+++ b/templates/navigationButton-drawer.hbs
@@ -1,4 +1,4 @@
-<button class="{{_classes}} {{_iconClasses}} nav-layout-{{_layout}}" data-event="{{_dataEvent}}" role="button" aria-label="{{ariaLabel}}">
+<button class="base {{_classes}} {{_iconClasses}} nav-layout-{{_layout}}" data-event="{{_dataEvent}}" role="button" aria-label="{{ariaLabel}}">
 	{{#if _showTooltip}}
 		<div class="tooltip">{{tooltip}}</div>
 	{{/if}}
