--- a/less/navigationButton.less
+++ b/less/navigationButton.less
@@ -13,7 +13,7 @@
 	}
 
 	.tooltip {
-		font-family: @font-family;
+		/*font-family: @font-family;*/
 		font-weight: normal;
 		font-size: 13px;
 	        position: absolute;
@@ -37,6 +37,7 @@
 
 	a, button {
 		position:relative;
+		min-height: 0 !important;
 	}
 
 	.no-touch &:hover {
